2010-07-19  Eric Blake  <eblake@redhat.com>

	* textbinary.sgml (textbin-devel): Document temp file behavior.
	(textbin-issue): Use sed rather than cat as an example of a
	default-mode application.
	* new-features.sgml (ov-new1.7.6): Document mkostemp[s].

2010-06-27  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* Makefile.in: Use "xmlto pdf" instead of docbook2pdf.
	Force the dblatex backend, as the default passivetex does not work.
	* README: Replace docbook-utils dependency with dblatex.
	Update required docbook-xml version.
	* faq-programming.xml (building-cygwin): Ditto.

2010-06-26  Ken Brown  <kbrown@cornell.edu>

	* setup-net.sgml: Add a paragraph describing now to avoid unintentional
	upgrades.

2010-04-29  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.6): Add new "dos" and "inode" mount
	options.
	* pathnames.sgml (mount-table): Ditto.
	(pathnames-specialchars): Change description order.  Add paragraph
	to explain new behaviour in terms of leading spaces and trailing dots
	and spaces in pathnames.

2010-04-28  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.6): Add locale wide-char changes.

2010-04-22  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver.sgml: Note the fact that slave tty/pty handle dispersal is
	unsed as of Cygwin 1.7.6.
	* new-features.sgml (ov-new1.7.6): New section.  Add tty/pty and
	setrlimit changes.

2010-04-11  Christopher Faylor  <me+cygwin@cgf.cx>

	* cygwin.dsl: Remove comments.

2010-04-11  Corinna Vinschen  <corinna@vinschen.de>

	* new-features.sgml (ov-new1.7.5): New section.

2010-04-11  Christopher Faylor  <me+cygwin@cgf.cx>

	* cygwin-api.in.sgml: Update to DocBook SGML 4.5 DTD.
	* cygwin-ug-net.in.sgml: Ditto.
	* cygwin-ug.in.sgml: Ditto.
	* faq-sections.xml: Ditto.
	* faq.xml: Ditto.

2010-04-01  Charles Wilson  <cygwin@cwilson.fastmail.fm>

	* setup-net.sgml: Remove more mentions of rxvt.

2010-03-31  Christopher Faylor  <me+cygwin@cgf.cx>
