@@ -167,8 +167,8 @@ if you know the name of a package you want to install but not which
 category it is in. 
 Click on the <literal>View</literal> button and it will rotate between 
 <literal>Category</literal> (the default), <literal>Full</literal> (all 
-packages), and <literal>Partial</literal> (only packages to be
-installed or upgraded).
+packages), and <literal>Pending</literal> (only packages to be
+installed, removed or upgraded).
 If you are familiar with Unix, you will probably want to at least glance 
 through the <literal>Full</literal> listing for your favorite tools.
 </para>
@@ -189,7 +189,7 @@ to close all Cygwin windows and stop all Cygwin processes before
 <command>setup.exe</command> begins to install the upgraded package.
 </para>
 <para>
-To avoid unintentionally upgrading, use the <literal>Partial</literal>
+To avoid unintentionally upgrading, use the <literal>Pending</literal>
 view to see which packages have been marked for upgrading.  If you
 don't want to upgrade a package, click on the new version number to
 toggle it until it says <literal>Keep</literal>.
